--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
     <form id="form-container" class="form-container">
-        <label for="street">Street: </label><input type="text" id="street" value="">
-        <label for="city">City: </label><input type="text" id="city" value="">
+        <label for="street">Street: </label><input type="text" id="street" value="7447 N Wayland">
+        <label for="city">City: </label><input type="text" id="city" value="Portland Oregon">
         <button id="submit-btn">Submit</button>
     </form>
 
